[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsidesrs"
dynamic = ["version"]
description = "REST API framework based on FastAPI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "aiosqlite",
  "freenit[ormar]",
]
authors = [
  {name = "John Doe", email = "john@doe.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Web Environment",
  "Programming Language :: Python"
]

[project.optional-dependencies]
  beanie = ["freenit[beanie]"]
  dev = ["freenit[dev]"]
  ldap = ["freenit[ldap]"]
  ormar = ["freenit[ormar]"]
  test = ["freenit[test]"]

[project.urls]
Homepage = "https://freenit.org" 
Repository = "https://github.com/freenit-framework/backend"

[tool.hatch.version]
path = "bsidesrs/__init__.py"
